--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>ConfigServer</artifactId>
+    <artifactId>ConfigService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ConfigServer</name>
-    <description>ConfigServer</description>
+    <name>Config service</name>
+    <description>Config service</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
