--- a/config-service/src/main/resources/myconfig/outil-service.properties
+++ b/config-service/src/main/resources/myconfig/outil-service.properties
@@ -1,8 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/laboratoire
+spring.datasource.username=postgres
+spring.datasource.password=ff
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lab2023
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
+
